sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:6: error: '(' expected but identifier found.
      if getValeur(i)>getValeur(i+1){
         ^AlgBubbleSort1:9: error: illegal start of simple expression
    }
    ^