sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var ok :Boolean = false
  while (!ok){
    for (i<-0 to getNombreValeur()-2){
      if getValeur(i)>getValeur(i+1){
        echange(i,i+1)
      }
    }
    
  }
}